--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -37,4 +37,10 @@ logging:
     hello.controller: debug
 
 
+#  톰캣 메트릭 : `threads.busy`, `threads.config,max`
+server:
+  tomcat:
+    mbeanregistry:
+      enabled: true
+
 
